@@ -1,7 +1,8 @@
 ggplot 0.6
 ----------------------------------------
 
-  * new stat_spoke to make it possible to use geom_segment parameterised by angle and radius
+  * all discrete scales now have labels argument which you can use to override the factor levels
+  * new stat_spoke to make it possible to use geom_segment parameterised by angle and radius (thanks to Jiho for the suggestion)
   * new stat_function makes it easy to superimpose a function on the plot
   * the middle line geom_crossbar is now display thicker than the other lines, controlled by the parameter fatten (thanks to Heike Hofmann for the suggestion)
   * geom_vline, geom_hline and geom_abline should now behave better in a wider variety of settings
